test/expected/large/templates/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: templates
    foo.com/duversion: 1.5.9-20190909.1568068121625
    foo.com/version: 1.5.9
  labels:
    app.kubernetes.io/name: templates
    helm.sh/chart: templates-1.5.9
  name: templates
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: templates
  type: ClusterIP
