test/expected/large/templates/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: templates
    foo.com/duversion: 1.5.9-20190909.1568068121625
    foo.com/version: 1.5.9
  labels:
    app.kubernetes.io/name: templates
    helm.sh/chart: templates-1.5.9
  name: templates
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /templates
    - uri:
        prefix: /templates/
    route:
    - destination:
        host: templates.peekay.svc.cluster.local
